src/jsongen/build/JsonGenParser.ts
// Generated from /Users/user/Projects/react/test-data-generator/public/grammar/JsonGenParser.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import JsonGenParserListener from "./JsonGenParserListener.js";
import JsonGenParserVisitor from "./JsonGenParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class JsonGenParser extends Parser {
	public static readonly RANGE_VALUE = 1;
	public static readonly STRING = 2;
	public static readonly NUMBER = 3;
	public static readonly NULL = 4;
	public static readonly TRUE = 5;
	public static readonly FALSE = 6;
	public static readonly IDENTIFIER = 7;
	public static readonly ASSIGNMENT = 8;
	public static readonly COMMA = 9;
	public static readonly COLON = 10;
	public static readonly LPAREN = 11;
	public static readonly RPAREN = 12;
	public static readonly LSQUARE = 13;
	public static readonly RSQUARE = 14;
	public static readonly LCURL = 15;
	public static readonly RCURL = 16;
	public static readonly LPLACEHOLDER = 17;
	public static readonly RPLACEHOLDER = 18;
	public static readonly WS = 19;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_jsonGen = 0;
	public static readonly RULE_simpleValue = 1;
	public static readonly RULE_obj = 2;
	public static readonly RULE_pair = 3;
	public static readonly RULE_arr = 4;
	public static readonly RULE_placeholder = 5;
	public static readonly RULE_placeholderValue = 6;
	public static readonly RULE_value = 7;
	public static readonly RULE_args = 8;
	public static readonly RULE_arg = 9;
	public static readonly RULE_parameterValue = 10;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, null, 
                                                            "'null'", "'true'", 
                                                            "'false'", null, 
                                                            "'='", "','", 
                                                            "':'", "'('", 
                                                            "')'", "'['", 
                                                            "']'", "'{'", 
                                                            "'}'", "'<'", 
                                                            "'>'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "RANGE_VALUE", 
                                                             "STRING", "NUMBER", 
                                                             "NULL", "TRUE", 
                                                             "FALSE", "IDENTIFIER", 
                                                             "ASSIGNMENT", 
                                                             "COMMA", "COLON", 
                                                             "LPAREN", "RPAREN", 
                                                             "LSQUARE", 
                                                             "RSQUARE", 
                                                             "LCURL", "RCURL", 
                                                             "LPLACEHOLDER", 
                                                             "RPLACEHOLDER", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"jsonGen", "simpleValue", "obj", "pair", "arr", "placeholder", "placeholderValue", 
		"value", "args", "arg", "parameterValue",
	];
	public get grammarFileName(): string { return "JsonGenParser.g4"; }
	public get literalNames(): (string | null)[] { return JsonGenParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return JsonGenParser.symbolicNames; }
	public get ruleNames(): string[] { return JsonGenParser.ruleNames; }
	public get serializedATN(): number[] { return JsonGenParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, JsonGenParser._ATN, JsonGenParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public jsonGen(): JsonGenContext {
		let localctx: JsonGenContext = new JsonGenContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, JsonGenParser.RULE_jsonGen);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 22;
			this.value();
			this.state = 23;
			this.match(JsonGenParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public simpleValue(): SimpleValueContext {
		let localctx: SimpleValueContext = new SimpleValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, JsonGenParser.RULE_simpleValue);
		try {
			this.state = 33;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 2:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 25;
				this.match(JsonGenParser.STRING);
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 26;
				this.match(JsonGenParser.NUMBER);
				}
				break;
			case 15:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 27;
				this.obj();
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 28;
				this.arr();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 29;
				this.match(JsonGenParser.TRUE);
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 30;
				this.match(JsonGenParser.FALSE);
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 31;
				this.match(JsonGenParser.NULL);
				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 32;
				this.placeholder();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public obj(): ObjContext {
		let localctx: ObjContext = new ObjContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, JsonGenParser.RULE_obj);
		let _la: number;
		try {
			this.state = 48;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 35;
				this.match(JsonGenParser.LCURL);
				this.state = 36;
				this.pair();
				this.state = 41;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===9) {
					{
					{
					this.state = 37;
					this.match(JsonGenParser.COMMA);
					this.state = 38;
					this.pair();
					}
					}
					this.state = 43;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 44;
				this.match(JsonGenParser.RCURL);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 46;
				this.match(JsonGenParser.LCURL);
				this.state = 47;
				this.match(JsonGenParser.RCURL);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public pair(): PairContext {
		let localctx: PairContext = new PairContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, JsonGenParser.RULE_pair);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 50;
			this.match(JsonGenParser.STRING);
			this.state = 51;
			this.match(JsonGenParser.COLON);
			this.state = 52;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arr(): ArrContext {
		let localctx: ArrContext = new ArrContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, JsonGenParser.RULE_arr);
		let _la: number;
		try {
			this.state = 67;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 54;
				this.match(JsonGenParser.LSQUARE);
				this.state = 55;
				this.value();
				this.state = 60;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===9) {
					{
					{
					this.state = 56;
					this.match(JsonGenParser.COMMA);
					this.state = 57;
					this.value();
					}
					}
					this.state = 62;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 63;
				this.match(JsonGenParser.RSQUARE);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 65;
				this.match(JsonGenParser.LSQUARE);
				this.state = 66;
				this.match(JsonGenParser.RSQUARE);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public placeholder(): PlaceholderContext {
		let localctx: PlaceholderContext = new PlaceholderContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, JsonGenParser.RULE_placeholder);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 69;
			this.match(JsonGenParser.LPLACEHOLDER);
			this.state = 70;
			this.placeholderValue();
			this.state = 75;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===9) {
				{
				{
				this.state = 71;
				this.match(JsonGenParser.COMMA);
				this.state = 72;
				this.placeholderValue();
				}
				}
				this.state = 77;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 78;
			this.match(JsonGenParser.RPLACEHOLDER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public placeholderValue(): PlaceholderValueContext {
		let localctx: PlaceholderValueContext = new PlaceholderValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, JsonGenParser.RULE_placeholderValue);
		try {
			this.state = 82;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 80;
				this.value();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 81;
				this.parameterValue();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public value(): ValueContext {
		let localctx: ValueContext = new ValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, JsonGenParser.RULE_value);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			this.simpleValue();
			this.state = 86;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===11) {
				{
				this.state = 85;
				this.args();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public args(): ArgsContext {
		let localctx: ArgsContext = new ArgsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, JsonGenParser.RULE_args);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 88;
			this.match(JsonGenParser.LPAREN);
			this.state = 89;
			this.arg();
			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===9) {
				{
				{
				this.state = 90;
				this.match(JsonGenParser.COMMA);
				this.state = 91;
				this.arg();
				}
				}
				this.state = 96;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 97;
			this.match(JsonGenParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arg(): ArgContext {
		let localctx: ArgContext = new ArgContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, JsonGenParser.RULE_arg);
		try {
			this.state = 103;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 99;
				this.match(JsonGenParser.IDENTIFIER);
				this.state = 100;
				this.match(JsonGenParser.ASSIGNMENT);
				this.state = 101;
				this.parameterValue();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 102;
				this.parameterValue();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameterValue(): ParameterValueContext {
		let localctx: ParameterValueContext = new ParameterValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, JsonGenParser.RULE_parameterValue);
		let _la: number;
		try {
			this.state = 111;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 2:
			case 3:
			case 4:
			case 5:
			case 6:
			case 13:
			case 15:
			case 17:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 105;
				this.value();
				}
				break;
			case 1:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 106;
				this.match(JsonGenParser.RANGE_VALUE);
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 107;
				this.match(JsonGenParser.IDENTIFIER);
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===11) {
					{
					this.state = 108;
					this.args();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!JsonGenParser.__ATN) {
			JsonGenParser.__ATN = new ATNDeserializer().deserialize(JsonGenParser._serializedATN);
		}

		return JsonGenParser.__ATN;
	}


	static DecisionsToDFA = JsonGenParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class JsonGenContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public value(): ValueContext {
		return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
	}
	public EOF(): TerminalNode {
		return this.getToken(JsonGenParser.EOF, 0);
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_jsonGen;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterJsonGen) {
	 		listener.enterJsonGen(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitJsonGen) {
	 		listener.exitJsonGen(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitJsonGen) {
			return visitor.visitJsonGen(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class SimpleValueContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public STRING(): TerminalNode {
		return this.getToken(JsonGenParser.STRING, 0);
	}
	public NUMBER(): TerminalNode {
		return this.getToken(JsonGenParser.NUMBER, 0);
	}
	public obj(): ObjContext {
		return this.getTypedRuleContext(ObjContext, 0) as ObjContext;
	}
	public arr(): ArrContext {
		return this.getTypedRuleContext(ArrContext, 0) as ArrContext;
	}
	public TRUE(): TerminalNode {
		return this.getToken(JsonGenParser.TRUE, 0);
	}
	public FALSE(): TerminalNode {
		return this.getToken(JsonGenParser.FALSE, 0);
	}
	public NULL(): TerminalNode {
		return this.getToken(JsonGenParser.NULL, 0);
	}
	public placeholder(): PlaceholderContext {
		return this.getTypedRuleContext(PlaceholderContext, 0) as PlaceholderContext;
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_simpleValue;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterSimpleValue) {
	 		listener.enterSimpleValue(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitSimpleValue) {
	 		listener.exitSimpleValue(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitSimpleValue) {
			return visitor.visitSimpleValue(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ObjContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public LCURL(): TerminalNode {
		return this.getToken(JsonGenParser.LCURL, 0);
	}
	public pair_list(): PairContext[] {
		return this.getTypedRuleContexts(PairContext) as PairContext[];
	}
	public pair(i: number): PairContext {
		return this.getTypedRuleContext(PairContext, i) as PairContext;
	}
	public RCURL(): TerminalNode {
		return this.getToken(JsonGenParser.RCURL, 0);
	}
	public COMMA_list(): TerminalNode[] {
	    	return this.getTokens(JsonGenParser.COMMA);
	}
	public COMMA(i: number): TerminalNode {
		return this.getToken(JsonGenParser.COMMA, i);
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_obj;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterObj) {
	 		listener.enterObj(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitObj) {
	 		listener.exitObj(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitObj) {
			return visitor.visitObj(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class PairContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public STRING(): TerminalNode {
		return this.getToken(JsonGenParser.STRING, 0);
	}
	public COLON(): TerminalNode {
		return this.getToken(JsonGenParser.COLON, 0);
	}
	public value(): ValueContext {
		return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_pair;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterPair) {
	 		listener.enterPair(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitPair) {
	 		listener.exitPair(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitPair) {
			return visitor.visitPair(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArrContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public LSQUARE(): TerminalNode {
		return this.getToken(JsonGenParser.LSQUARE, 0);
	}
	public value_list(): ValueContext[] {
		return this.getTypedRuleContexts(ValueContext) as ValueContext[];
	}
	public value(i: number): ValueContext {
		return this.getTypedRuleContext(ValueContext, i) as ValueContext;
	}
	public RSQUARE(): TerminalNode {
		return this.getToken(JsonGenParser.RSQUARE, 0);
	}
	public COMMA_list(): TerminalNode[] {
	    	return this.getTokens(JsonGenParser.COMMA);
	}
	public COMMA(i: number): TerminalNode {
		return this.getToken(JsonGenParser.COMMA, i);
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_arr;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterArr) {
	 		listener.enterArr(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitArr) {
	 		listener.exitArr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitArr) {
			return visitor.visitArr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class PlaceholderContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public LPLACEHOLDER(): TerminalNode {
		return this.getToken(JsonGenParser.LPLACEHOLDER, 0);
	}
	public placeholderValue_list(): PlaceholderValueContext[] {
		return this.getTypedRuleContexts(PlaceholderValueContext) as PlaceholderValueContext[];
	}
	public placeholderValue(i: number): PlaceholderValueContext {
		return this.getTypedRuleContext(PlaceholderValueContext, i) as PlaceholderValueContext;
	}
	public RPLACEHOLDER(): TerminalNode {
		return this.getToken(JsonGenParser.RPLACEHOLDER, 0);
	}
	public COMMA_list(): TerminalNode[] {
	    	return this.getTokens(JsonGenParser.COMMA);
	}
	public COMMA(i: number): TerminalNode {
		return this.getToken(JsonGenParser.COMMA, i);
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_placeholder;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterPlaceholder) {
	 		listener.enterPlaceholder(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitPlaceholder) {
	 		listener.exitPlaceholder(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitPlaceholder) {
			return visitor.visitPlaceholder(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class PlaceholderValueContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public value(): ValueContext {
		return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
	}
	public parameterValue(): ParameterValueContext {
		return this.getTypedRuleContext(ParameterValueContext, 0) as ParameterValueContext;
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_placeholderValue;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterPlaceholderValue) {
	 		listener.enterPlaceholderValue(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitPlaceholderValue) {
	 		listener.exitPlaceholderValue(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitPlaceholderValue) {
			return visitor.visitPlaceholderValue(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ValueContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public simpleValue(): SimpleValueContext {
		return this.getTypedRuleContext(SimpleValueContext, 0) as SimpleValueContext;
	}
	public args(): ArgsContext {
		return this.getTypedRuleContext(ArgsContext, 0) as ArgsContext;
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_value;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterValue) {
	 		listener.enterValue(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitValue) {
	 		listener.exitValue(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitValue) {
			return visitor.visitValue(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArgsContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public LPAREN(): TerminalNode {
		return this.getToken(JsonGenParser.LPAREN, 0);
	}
	public arg_list(): ArgContext[] {
		return this.getTypedRuleContexts(ArgContext) as ArgContext[];
	}
	public arg(i: number): ArgContext {
		return this.getTypedRuleContext(ArgContext, i) as ArgContext;
	}
	public RPAREN(): TerminalNode {
		return this.getToken(JsonGenParser.RPAREN, 0);
	}
	public COMMA_list(): TerminalNode[] {
	    	return this.getTokens(JsonGenParser.COMMA);
	}
	public COMMA(i: number): TerminalNode {
		return this.getToken(JsonGenParser.COMMA, i);
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_args;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterArgs) {
	 		listener.enterArgs(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitArgs) {
	 		listener.exitArgs(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitArgs) {
			return visitor.visitArgs(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArgContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public IDENTIFIER(): TerminalNode {
		return this.getToken(JsonGenParser.IDENTIFIER, 0);
	}
	public ASSIGNMENT(): TerminalNode {
		return this.getToken(JsonGenParser.ASSIGNMENT, 0);
	}
	public parameterValue(): ParameterValueContext {
		return this.getTypedRuleContext(ParameterValueContext, 0) as ParameterValueContext;
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_arg;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterArg) {
	 		listener.enterArg(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitArg) {
	 		listener.exitArg(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitArg) {
			return visitor.visitArg(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ParameterValueContext extends ParserRuleContext {
	constructor(parser?: JsonGenParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public value(): ValueContext {
		return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
	}
	public RANGE_VALUE(): TerminalNode {
		return this.getToken(JsonGenParser.RANGE_VALUE, 0);
	}
	public IDENTIFIER(): TerminalNode {
		return this.getToken(JsonGenParser.IDENTIFIER, 0);
	}
	public args(): ArgsContext {
		return this.getTypedRuleContext(ArgsContext, 0) as ArgsContext;
	}
    public get ruleIndex(): number {
    	return JsonGenParser.RULE_parameterValue;
	}
	public enterRule(listener: JsonGenParserListener): void {
	    if(listener.enterParameterValue) {
	 		listener.enterParameterValue(this);
		}
	}
	public exitRule(listener: JsonGenParserListener): void {
	    if(listener.exitParameterValue) {
	 		listener.exitParameterValue(this);
		}
	}
	// @Override
	public accept<Result>(visitor: JsonGenParserVisitor<Result>): Result {
		if (visitor.visitParameterValue) {
			return visitor.visitParameterValue(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}
